Scaling fix. Image is now background on mobile

--- a/src/sections/events-page/styling/FloatingWidget.module.css
+++ b/src/sections/events-page/styling/FloatingWidget.module.css
@@ -3,70 +3,65 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: calc(35px + 35vh);
-    width: calc(50px + 26vw);
+    height: calc(50px + 35vh);
+    width: calc(50px + 25vw);
+    max-width: 450px;
     border-radius: 8px;
     margin: 10px;
 }
 
 .floatingWidget img{
     display: flex;
+    flex-basis: inherit;
     flex-direction: column;
     align-items: center;
     border-radius: 8px;
     object-fit: cover;
     border-color: black;
     border-style: solid;
-    height: 100%;
-    width: 98%;
+    height: inherit;
+    width: inherit;
     min-height: 0;
     min-width: 0;
 }
 
 .floatingWidget .description {
     display: flex;
+    flex-basis: inherit;
     flex-direction: column;
     align-items: center;
     flex-flow: row wrap;
     position: relative;
-    top: -2vh;
+    top: -3vh;
     align-items: center;
     border-radius: 8px;
     background-color: #fcd615;
     border-color: black;
     border-style: solid;
-    margin: 0px;
-    padding: 20px;
-    font-size: 16px;
-    max-width: 98%;
-    min-height: 0;
-    min-width: 0;
-    overflow: hidden;
+    margin: 10px;
+    padding-bottom: 3vh;
+    padding-left: 5px;
+    width: calc(45px + 25vw);
+    height: fit-content;
 }
 
 .floatingWidget .description h1 {
-    position: relative;
-    top: -2.5vh;
     align-items: center;
-    margin: 0px;
-    padding: 0px;
     font-size: 16px;
 }
 
 .floatingWidget .description p {
-    position: relative;
-    top: -2.5vh;
     align-items: center;
-    margin: 0px;
-    padding: 0px;
-    font-size: 14px;
+    font-size: 12px;
+    margin-bottom: 1vh;
 }
 
 .btn:link,
 .btn:visited{
-    padding: 2px 10px;
+
+    padding: 1px 5px;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 12px;
     text-decoration: none;
     border-radius: 200px;
     color: white; 
@@ -75,12 +70,54 @@
     border: 1px solid #23212c;
     color: white;
     position: absolute;
-    bottom: 0.5vh;
-    right: 0.5vw;
+    bottom: 0.2vh;
+    right: 0.2vw;
 }
 
 .btn:hover,
 .btn:active{
     background-color: #3a3637;
     border: 1px solid #3a3637;
+}
+
+/* 430 px max width */
+@media screen and (max-width: 430px){
+    .floatingWidget img{
+        display: none;
+    }
+
+    .floatingWidget .description {
+        display: flex;
+        flex-basis: inherit;
+        flex-direction: column;
+        align-items: center;
+        flex-flow: row wrap;
+        position: relative;
+        top: -3vh;
+        align-items: center;
+        border-radius: 8px;
+        /* background-color: #fcd615; */
+        background-size: calc(50px + 25vw) calc(50px + 35vh);;
+        opacity: 1;
+        background-image: url("placeholder.jpg");
+        border-color: black;
+        border-style: solid;
+        margin: 10px;
+        padding-bottom: 3vh;
+        padding-left: 5px;
+        width: calc(45px + 25vw);
+        height: fit-content;
+        color: white;
+    }
+
+    .floatingWidget .description h1 {
+        align-items: center;
+        font-size: 14px;
+    }
+    
+    .floatingWidget .description p {
+        align-items: center;
+        font-size: 10px;
+        margin-bottom: 1vh;
+    }
 }
